; ModuleID = '/home/carl/AnghaBench/git/builtin/extr_merge-tree.c_merge_trees.c'
source_filename = "/home/carl/AnghaBench/git/builtin/extr_merge-tree.c_merge_trees.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tree_desc = type { i32 }
%struct.traverse_info = type { i32 }

@threeway_callback = common dso_local global i32 0, align 4
@the_index = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.tree_desc*, i8*)* @merge_trees to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @merge_trees(%struct.tree_desc* %0, i8* %1) #0 {
  %3 = alloca %struct.tree_desc*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.traverse_info, align 4
  store %struct.tree_desc* %0, %struct.tree_desc** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = call i32 @setup_traverse_info(%struct.traverse_info* %5, i8* %6)
  %8 = load i32, i32* @threeway_callback, align 4
  %9 = getelementptr inbounds %struct.traverse_info, %struct.traverse_info* %5, i32 0, i32 0
  store i32 %8, i32* %9, align 4
  %10 = load %struct.tree_desc*, %struct.tree_desc** %3, align 8
  %11 = call i32 @traverse_trees(i32* @the_index, i32 3, %struct.tree_desc* %10, %struct.traverse_info* %5)
  ret void
}

declare dso_local i32 @setup_traverse_info(%struct.traverse_info*, i8*) #1

declare dso_local i32 @traverse_trees(i32*, i32, %struct.tree_desc*, %struct.traverse_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
